--- a/MyCity4Kids/MyCity4Kids/res/layout/drawer_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/drawer_layout.xml
@@ -96,7 +96,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_below="@+id/shortStoryTextView"
-            android:drawableLeft="@drawable/ic_bottom_group_selected"
+            android:drawableLeft="@drawable/tab4_selected"
             android:drawablePadding="20dp"
             android:gravity="center_vertical"
             android:paddingBottom="12dp"
@@ -124,9 +124,9 @@
             android:drawableLeft="@drawable/ic_bookmark"
             android:drawablePadding="20dp"
             android:drawableTint="#d54058"
-            android:gravity="center_vertical"
             android:paddingBottom="12dp"
             android:paddingLeft="30dp"
+            android:gravity="center_vertical"
             android:paddingRight="16dp"
             android:paddingTop="12dp"
             android:text="@string/user_activities.tabs.bookmark"
