--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_image_poll_post_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_image_poll_post_item.xml
@@ -69,7 +69,7 @@
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
         android:src="@drawable/ic_more"
-        android:tint="@color/groups.blue_color" />
+        android:tint="@color/app_red" />
 
     <com.mycity4kids.widget.LinkifiedTextView
         android:id="@+id/pollQuestionTextView"
@@ -343,7 +343,8 @@
             android:id="@+id/upvoteImageVIew"
             android:layout_width="16dp"
             android:layout_height="16dp"
-            android:src="@drawable/ic_upvote" />
+            android:src="@drawable/ic_upvote"
+            android:tint="@color/app_red"/>
 
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/upvoteTextView"
@@ -373,7 +374,8 @@
             android:id="@+id/downvoteImageVIew"
             android:layout_width="16dp"
             android:layout_height="16dp"
-            android:src="@drawable/ic_downvote" />
+            android:src="@drawable/ic_downvote"
+            android:tint="@color/app_red"/>
 
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/downvoteTextView"
@@ -400,7 +402,7 @@
         android:gravity="bottom"
         android:padding="5dp"
         android:text="20 Comments"
-        android:textColor="@color/groups.blue_color"
+        android:textColor="@color/app_red"
         android:textSize="12sp"
         app:fontName="oswald.ttf" />
 
@@ -414,7 +416,7 @@
         android:layout_toLeftOf="@+id/shareTextView"
         android:padding="5dp"
         android:src="@drawable/ic_comments"
-        android:tint="@color/groups.blue_color" />
+        android:tint="@color/app_red" />
 
     <ImageView
         android:id="@+id/shareTextView"
@@ -430,5 +432,5 @@
         android:paddingRight="5dp"
         android:paddingTop="5dp"
         android:src="@drawable/ic_share_white"
-        android:tint="@color/ad.follow_following_text" />
+        android:tint="@color/app_red" />
 </RelativeLayout>
