--- a/MyCity4Kids/MyCity4Kids/res/layout/add_text_group_post_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_text_group_post_activity.xml
@@ -50,7 +50,7 @@
                 android:layout_centerVertical="true"
                 android:padding="12dp"
                 android:text="@string/editor.publish"
-                android:textColor="@color/editor.publish"
+                android:textColor="@color/app_red"
                 android:textSize="20sp"
                 app:fontName="oswald_regular.ttf" />
         </RelativeLayout>
@@ -81,8 +81,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="left|top"
                 android:hint="@string/groups.ask_something"
-                android:paddingBottom="28dp"
                 android:inputType="textMultiLine"
+                android:paddingBottom="28dp"
                 android:paddingLeft="18dp"
                 android:paddingRight="18dp"
                 android:paddingTop="28dp"
@@ -157,6 +157,7 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:button="@drawable/language_selector_checkbox"
+        android:buttonTint="@color/app_red"
         android:checked="false"
         android:focusable="false"
         android:focusableInTouchMode="false"
@@ -165,7 +166,7 @@
         android:paddingLeft="10dp"
         android:paddingRight="2dp"
         android:paddingTop="10dp"
-        android:textColor="@color/app_settings.edit_prefs.pref_lang_name"
+        android:textColor="@color/app_red"
         android:textSize="16sp" />
 
     <RelativeLayout
