--- a/MyCity4Kids/MyCity4Kids/res/layout/app_settings_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/app_settings_activity.xml
@@ -62,7 +62,7 @@
         android:elevation="3dp"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:tabIndicatorColor="@color/home.trending.tabbar_indicator"
+        app:tabIndicatorColor="@color/app_red"
         app:tabIndicatorHeight="3dp"
         app:tabMode="scrollable"
         app:tabSelectedTextColor="@color/app_settings.tabbar.text"
