--- a/MyCity4Kids/MyCity4Kids/res/layout/edit_preferences_tab_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/edit_preferences_tab_fragment.xml
@@ -83,7 +83,7 @@
                 android:paddingRight="20dp"
                 android:paddingTop="10dp"
                 android:text="@string/app_settings.edit_prefs.add_account"
-                android:textColor="@color/app_settings.edit_prefs.add_account"
+                android:textColor="@color/app_red"
                 android:textSize="14sp"
                 app:fontName="oswald_regular.ttf" />
 
@@ -113,7 +113,7 @@
                 android:paddingRight="20dp"
                 android:paddingTop="10dp"
                 android:text="@string/app_settings.edit_prefs.add"
-                android:textColor="@color/app_settings.edit_prefs.add"
+                android:textColor="@color/app_red"
                 android:textSize="16sp"
                 app:fontName="oswald.ttf" />
 
@@ -144,7 +144,7 @@
                 android:paddingRight="20dp"
                 android:paddingTop="10dp"
                 android:text="@string/app_settings.edit_prefs.add"
-                android:textColor="@color/app_settings.edit_prefs.add"
+                android:textColor="@color/app_red"
                 android:textSize="16sp"
                 android:visibility="gone"
                 app:fontName="oswald.ttf" />
@@ -175,7 +175,7 @@
                 android:paddingRight="20dp"
                 android:paddingTop="10dp"
                 android:text="@string/app_settings.edit_prefs.add"
-                android:textColor="@color/app_settings.edit_prefs.add"
+                android:textColor="@color/app_red"
                 android:textSize="16sp"
                 android:visibility="gone"
                 app:fontName="oswald.ttf" />
@@ -213,7 +213,7 @@
                 android:paddingRight="20dp"
                 android:paddingTop="10dp"
                 android:text="@string/app_settings.edit_prefs.add_topics"
-                android:textColor="@color/app_settings.edit_prefs.add_topics"
+                android:textColor="@color/app_red"
                 android:textSize="14sp"
                 app:fontName="oswald.ttf" />
 
@@ -246,7 +246,7 @@
                 android:paddingLeft="20dp"
                 android:paddingTop="10dp"
                 android:text="@string/app_settings.edit_prefs.more_topics"
-                android:textColor="@color/app_settings.edit_prefs.more_topics"
+                android:textColor="@color/app_red"
                 android:textSize="16sp"
                 app:fontName="oswald.ttf" />
 
@@ -259,12 +259,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginTop="10dp"
-        android:background="#ffffff"
+        android:background="@color/app_red"
         android:elevation="20dp"
         android:gravity="center"
         android:padding="15dp"
         android:text="@string/app_settings.edit_profile.save"
-        android:textColor="@color/app_settings.edit_profile.save"
+        android:textColor="#fff"
         android:textSize="17sp"
         app:fontName="oswald_regular.ttf" />
 </RelativeLayout>
