--- a/MyCity4Kids/MyCity4Kids/res/layout/facebook_phone_login_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/facebook_phone_login_activity.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@color/blue_bg"
+        android:background="@color/app_red"
         android:gravity="center"
         android:padding="20dp"
         android:text="LOGIN"
