--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_grid_item_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_grid_item_layout.xml
@@ -1,31 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/groupsGridItemView"
+    xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_gravity="center">
+    android:elevation="0dp"
+    app:cardCornerRadius="3dp"
+    app:cardElevation="0dp">
 
-    <ImageView
-        android:id="@+id/groupImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="110dp"
-        android:scaleType="center"
-        android:src="@drawable/default_article" />
-
-    <View
-        android:layout_width="wrap_content"
-        android:layout_height="110dp"
-        android:background="@color/explore_listing.topics.layer" />
-
-    <com.mycity4kids.widget.CustomFontTextView
-        android:id="@+id/groupNameTextView"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/groupsGridItemView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:gravity="center"
-        android:text="TOPICS"
-        android:textColor="@color/explore_listing.explore_categories.category_name"
-        android:textSize="18sp"
-        app:fontName="oswald_regular.ttf" />
-</RelativeLayout>
+        android:layout_gravity="center">
+
+
+        <ImageView
+            android:id="@+id/groupImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="110dp"
+            android:scaleType="center"
+            android:src="@drawable/default_article" />
+
+
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="110dp"
+            android:background="@color/explore_listing.topics.layer" />
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/groupNameTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:shadowColor="#48000000"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="6"
+            android:text="TOPICS"
+            android:textColor="@color/explore_listing.explore_categories.category_name"
+            android:textSize="18sp"
+            app:fontName="oswald_regular.ttf" />
+
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
