--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_media_post_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_media_post_item.xml
@@ -69,7 +69,7 @@
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
         android:src="@drawable/ic_more"
-        android:tint="@color/groups.blue_color" />
+        android:tint="@color/app_red" />
 
     <!--<com.daimajia.slider.library.SliderLayout-->
     <!--android:id="@+id/postDataViewPager"-->
@@ -176,7 +176,8 @@
             android:id="@+id/upvoteImageVIew"
             android:layout_width="16dp"
             android:layout_height="16dp"
-            android:src="@drawable/ic_upvote" />
+            android:src="@drawable/ic_upvote"
+            android:tint="@color/app_red"/>
 
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/upvoteTextView"
@@ -206,7 +207,8 @@
             android:id="@+id/downvoteImageVIew"
             android:layout_width="16dp"
             android:layout_height="16dp"
-            android:src="@drawable/ic_downvote" />
+            android:src="@drawable/ic_downvote"
+            android:tint="@color/app_red"/>
 
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/downvoteTextView"
@@ -233,7 +235,7 @@
         android:gravity="bottom"
         android:padding="5dp"
         android:text="20 Comments"
-        android:textColor="@color/groups.blue_color"
+        android:textColor="@color/app_red"
         android:textSize="12sp"
         app:fontName="oswald.ttf" />
 
@@ -247,7 +249,7 @@
         android:layout_toLeftOf="@+id/shareTextView"
         android:padding="5dp"
         android:src="@drawable/ic_comments"
-        android:tint="@color/groups.blue_color" />
+        android:tint="@color/app_red" />
 
     <!--<com.mycity4kids.widget.CustomFontTextView-->
     <!--android:id="@+id/postCommentsTextView"-->
@@ -280,6 +282,6 @@
         android:paddingRight="5dp"
         android:paddingTop="5dp"
         android:src="@drawable/ic_share_white"
-        android:tint="@color/ad.follow_following_text" />
+        android:tint="@color/app_red" />
 </RelativeLayout>
 
