--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_summary_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_summary_activity.xml
@@ -47,7 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginTop="10dp"
-        android:background="@color/groups.blue_color"
+        android:background="@color/app_red"
         android:gravity="center"
         android:padding="15dp"
         android:text="@string/groups.join_group"
