--- a/MyCity4Kids/MyCity4Kids/res/layout/preferred_language_recyler_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/preferred_language_recyler_item.xml
@@ -9,6 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:button="@drawable/language_selector_checkbox"
+        android:buttonTint="@color/app_red"
+        android:backgroundTint="@color/app_red"
         android:checked="false"
         android:drawablePadding="20dp"
         android:focusable="false"
